[package]
name = "bootstrap2-cf"
version = "0.0.1-alpha"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bootstrap2-core = { workspace = true }
js-sys = { version = "0.3.68", default-features = false }
serde_json = { workspace = true }
wasm-bindgen = { version = "0.2.91", default-features = false }
wasm-bindgen-futures = { version = "0.4.41", default-features = false }
wee_alloc = { version = "0.4.5", default-features = false }
